Better fix for issue building on Java 16 and later
It turns out there is an updated version of codox that fixes the
problem! I just forgot that `lein ancient` doesn't tell me about
outdated plugins, I needed to run `lein ancient :plugins`.